# TimeSeriesIterator

./: README.md  pyproject.toml  requirements.txt
src/time_series_iterator/: README.md  __init__.py  index_base.py  iterator.py  media_type.py  parameters.py
src/time_series_iterator/iterators/: README.md  __init__.py  image.py  video.py
src/time_series_iterator/utils/: README.md  __init__.py  index_base.py  media_type.py
