[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-iterator"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "Iterators for time-series media data with configurable sampling and index base."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "id-manager @ git+https://github.com/ry-yoshida-private/IDManager.git",
    "video-reader @ git+https://github.com/ry-yoshida-private/VideoReader.git",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/TimeSeriesIterator"
"Bug Tracker" = "https://github.com/ry-yoshida-private/TimeSeriesIterator/issues"

[tool.setuptools.packages.find]
where = ["src"]
